--- a/session_3/ho/fox-hotel.html
+++ b/session_3/ho/fox-hotel.html
@@ -1,23 +1,41 @@
-<div data-role="page" id="fox">
-  <div data-role="header">
-    <a href=""
-       data-rel="back"
-       data-icon="back"
-       data-transition="slidefade"
-       data-direction="reverse">Go Back</a>
-    <h1>Five Star Hotels</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Zedland Hotels</title>
+
+  <link
+    rel="stylesheet"
+    href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
+</head>
+<body>
+  <div data-role="page" id="fox">
+    <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-transition="slidefade"
+         data-direction="reverse">Go Back</a>
+      <h1>Five Star Hotels</h1>
+    </div>
+    <div data-role="content">
+      <h2>Fox Hotel</h2>
+      <ul>
+        <li>Genuine *****</li>
+        <li>Extra large rooms and suites</li>
+        <li>Designer furniture</li>
+        <li>Full size pool and full gym</li>
+        <li>Michelin star restaurant</li>
+      </ul>
+    </div>
+    <div data-role="footer">
+      <h4>Navigation here</h4>
+    </div>
   </div>
-  <div data-role="content">
-    <h2>Fox Hotel</h2>
-    <ul>
-      <li>Genuine *****</li>
-      <li>Extra large rooms and suites</li>
-      <li>Designer furniture</li>
-      <li>Full size pool and full gym</li>
-      <li>Michelin star restaurant</li>
-    </ul>
-  </div>
-  <div data-role="footer">
-    <h4>Navigation here</h4>
-  </div>
-</div>
+</body>
+</html>
