Solutions for session 4

--- a/session_4/ho/churchill-hotel.html
+++ b/session_4/ho/churchill-hotel.html
@@ -33,8 +33,20 @@
         <li>Michelin star restaurant</li>
       </ul>
     </div>
-    <div data-role="footer">
-      <h4>Navigation here</h4>
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html"data-prefetch>About</a>
+          </li>
+          <li>
+            <a href="contact.html"data-prefetch>Contact</a>
+          </li>
+          <li>
+            <a href="login.html"data-prefetch>Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
