--- a/session_4/ho/zedland-hotels.html
+++ b/session_4/ho/zedland-hotels.html
@@ -21,25 +21,40 @@
 
 		<div data-role="content">
 			<h2>Hotels</h2>
-			<h4>
-				<a href="#five" data-transition="slidefade">
-					Five Star Hotels
-				</a>
-			</h4>
-			<h4>
-				<a href="#four" data-transition="slidefade">
-					Four Star Hotels
-				</a>
-			</h4>
-			<h4>
-				<a href="#three" data-transition="slidefade">
-					Three Star Hotels
-				</a>
-			</h4>
+
+			<ul data-role="listview" data-inset="true">
+				<li>
+					<a href="#five" data-transition="slidefade">
+						Five Star Hotels
+					</a>
+				</li>
+				<li>
+					<a href="#four" data-transition="slidefade">
+						Four Star Hotels
+					</a>
+				</li>
+				<li>
+					<a href="#three" data-transition="slidefade">
+						Three Star Hotels
+					</a>
+				</li>
+			</ul>
 		</div>
 
-		<div data-role="footer">
-			<h4>Navigation here</h4>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar" data-id="footernav">
+				<ul>
+					<li>
+						<a href="about.html" data-prefetch>About</a>
+					</li>
+					<li>
+						<a href="contact.html" data-prefetch>Contact</a>
+					</li>
+					<li>
+						<a href="login.html" data-prefetch>Login</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -55,34 +70,51 @@
 		</div>
 		<div data-role="content">
 			<h2>Hotels</h2>
-			<p>
-				<a href="churchill-hotel.html"
-				   data-transition="slidefade"
-				   data-prefetch>
-				   Churchill Hotel
-				</a>
-			</p>
-			<p>
-				<a href="crookston-hotel.html"
-				   data-transition="slidefade">
-				   Crookston Hotel
-				</a>
-			</p>
-			<p>
-				<a href="fox-hotel.html"
-				   data-transition="slidefade">
-				   Fox Hotel
-				</a>
-			</p>
-			<p>
-				<a href="newline-hotel.html"
-				   data-transition="slidefade">
-				   Newline Hotel
-				</a>
-			</p>
+			<ul data-role="listview"
+			    data-inset="true"
+			    data-filter="true"
+			    data-filter-placeholder="Enter a Hotel Name">
+				<li>
+					<a href="churchill-hotel.html"
+					   data-transition="slidefade"
+					   data-prefetch>
+					   Churchill Hotel
+					</a>
+				</li>
+				<li>
+					<a href="crookston-hotel.html"
+					   data-transition="slidefade">
+					   Crookston Hotel
+					</a>
+				</li>
+				<li>
+					<a href="fox-hotel.html"
+					   data-transition="slidefade">
+					   Fox Hotel
+					</a>
+				</li>
+				<li>
+					<a href="newline-hotel.html"
+					   data-transition="slidefade">
+					   Newline Hotel
+					</a>
+				</li>
+			</ul>
 		</div>
-		<div data-role="footer">
-			<h4>Navigation here</h4>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar" data-id="footernav">
+				<ul>
+					<li>
+						<a href="about.html" data-prefetch>About</a>
+					</li>
+					<li>
+						<a href="contact.html" data-prefetch>Contact</a>
+					</li>
+					<li>
+						<a href="login.html" data-prefetch>Login</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -99,8 +131,20 @@
 		<div data-role="content">
 			<h2>Hotels</h2>
 		</div>
-		<div data-role="footer">
-			<h4>Navigation here</h4>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar" data-id="footernav">
+				<ul>
+					<li>
+						<a href="about.html" data-prefetch>About</a>
+					</li>
+					<li>
+						<a href="contact.html" data-prefetch>Contact</a>
+					</li>
+					<li>
+						<a href="login.html" data-prefetch>Login</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -117,8 +161,20 @@
 		<div data-role="content">
 			<h2>Hotels</h2>
 		</div>
-		<div data-role="footer">
-			<h4>Navigation here</h4>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar" data-id="footernav">
+				<ul>
+					<li>
+						<a href="about.html" data-prefetch>About</a>
+					</li>
+					<li>
+						<a href="contact.html" data-prefetch>Contact</a>
+					</li>
+					<li>
+						<a href="login.html" data-prefetch>Login</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </body>
