--- a/session_4/ho/about.html
+++ b/session_4/ho/about.html
@@ -14,36 +14,34 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
 </head>
 <body>
-  <div data-role="page" id="crookston">
+  <div data-role="page" id="about">
     <div data-role="header">
-      <a href=""
-         data-rel="back"
-         data-icon="back"
+      <a href="#home"
+         data-icon="home"
          data-transition="slidefade"
-         data-direction="reverse">Go Back</a>
-      <h1>Five Star Hotels</h1>
+         data-direction="reverse">
+        Home
+      </a>
+      <h1>Zedland Hotel Finder</h1>
     </div>
     <div data-role="content">
-      <h2>Crookston Hotel</h2>
-      <ul>
-        <li>Genuine *****</li>
-        <li>Extra large rooms and suites</li>
-        <li>Designer furniture</li>
-        <li>Full size pool and full gym</li>
-        <li>Michelin star restaurant</li>
-      </ul>
+      <h2>About</h2>
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
-            <a href="about.html"data-prefetch>About</a>
+            <a href="about.html"
+               class="ui-state-persist ui-btn-active"
+               data-prefetch>
+              About
+            </a>
           </li>
           <li>
-            <a href="contact.html"data-prefetch>Contact</a>
+            <a href="contact.html" data-prefetch>Contact</a>
           </li>
           <li>
-            <a href="login.html"data-prefetch>Login</a>
+            <a href="login.html" data-prefetch>Login</a>
           </li>
         </ul>
       </div>
