--- a/tma/implementation/accomodation.html
+++ b/tma/implementation/accomodation.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Zedland Hotels</title>
+  <title>Zedland University</title>
 
   <link
     rel="stylesheet"
     href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
@@ -21,10 +22,10 @@
          data-icon="back"
          data-transition="slidefade"
          data-direction="reverse">Go Back</a>
-      <h1>Five Star Hotels</h1>
+      <h1>Zedland</h1>
     </div>
     <div data-role="content">
-      <h2>Churchill Hotel</h2>
+      <h2>Accomodation A</h2>
       <ul>
         <li>Genuine *****</li>
         <li>Extra large rooms and suites</li>
