--- a/tma/implementation/index.html
+++ b/tma/implementation/index.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Zedland Hotels</title>
+	<title>Zedland University</title>
 
 	<link
 		rel="stylesheet"
 		href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+	<link rel="stylesheet" href="styles.css" />
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
@@ -16,26 +17,26 @@
 <body>
 	<div data-role="page" id="home">
 		<div data-role="header">
-			<h1>Zedland Hotel Finder</h1>
+			<h1>Zedland</h1>
 		</div>
 
 		<div data-role="content">
-			<h2>Hotels</h2>
+			<h2>Accomodation</h2>
 
 			<ul data-role="listview" data-inset="true">
 				<li>
 					<a href="#five" data-transition="slidefade">
-						Five Star Hotels
+						Five Star
 					</a>
 				</li>
 				<li>
 					<a href="#four" data-transition="slidefade">
-						Four Star Hotels
+						Four Star
 					</a>
 				</li>
 				<li>
 					<a href="#three" data-transition="slidefade">
-						Three Star Hotels
+						Three Star
 					</a>
 				</li>
 			</ul>
@@ -66,37 +67,37 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Five Star Hotels in Zedland</h1>
+			<h1>Zedland</h1>
 		</div>
 		<div data-role="content">
-			<h2>Hotels</h2>
+			<h2>Accomodation</h2>
 			<ul data-role="listview"
 			    data-inset="true"
 			    data-filter="true"
-			    data-filter-placeholder="Enter a Hotel Name">
+			    data-filter-placeholder="Enter accomodation name">
 				<li>
-					<a href="churchill-hotel.html"
+					<a href="accomodation.html"
 					   data-transition="slidefade"
 					   data-prefetch>
-					   Churchill Hotel
+					   Accomodation A
 					</a>
 				</li>
 				<li>
-					<a href="crookston-hotel.html"
+					<a href="accomodation.html"
 					   data-transition="slidefade">
-					   Crookston Hotel
+					   Accomodation B
 					</a>
 				</li>
 				<li>
-					<a href="fox-hotel.html"
+					<a href="accomodation.html"
 					   data-transition="slidefade">
-					   Fox Hotel
+					   Accomodation C
 					</a>
 				</li>
 				<li>
-					<a href="newline-hotel.html"
+					<a href="accomodation.html"
 					   data-transition="slidefade">
-					   Newline Hotel
+					   Accomodation D
 					</a>
 				</li>
 			</ul>
@@ -126,10 +127,10 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Four Star Hotels in Zedland</h1>
+			<h1>Zedland</h1>
 		</div>
 		<div data-role="content">
-			<h2>Hotels</h2>
+			<h2>Accomodation</h2>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar" data-id="footernav">
@@ -156,10 +157,10 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Three Star Hotels in Zedland</h1>
+			<h1>Zedland</h1>
 		</div>
 		<div data-role="content">
-			<h2>Hotels</h2>
+			<h2>Accomodation</h2>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar" data-id="footernav">
