--- a/tma/implementation/accommodation.html
+++ b/tma/implementation/accommodation.html
@@ -19,10 +19,11 @@
   <script src="assets/main.js"></script>
 </head>
 <body>
-  <div data-role="page" id="about">
+  <div data-role="page" id="accommodation">
     <div data-role="header">
-      <a href="#home"
-         data-icon="home"
+      <a href=""
+         data-rel="back"
+         data-icon="back"
          data-transition="slidefade"
          data-direction="reverse"
          data-iconpos="notext"
@@ -32,7 +33,15 @@
       <h1>Zedland</h1>
     </div>
     <div data-role="content">
-      <h2>About</h2>
+      <h2>Accomodation One</h2>
+      <div class="stars">
+        <i class="ui-icon-star ui-btn-icon-notext"></i>
+        <i class="ui-icon-star ui-btn-icon-notext"></i>
+        <i class="ui-icon-star ui-btn-icon-notext"></i>
+        <i class="ui-icon-star ui-btn-icon-notext"></i>
+        <i class="ui-icon-star ui-btn-icon-notext"></i>
+      </div>
+      <p>Room @ North</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -42,12 +51,46 @@
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
+      <p>
+        &pound;100pw
+      </p>
+
+      <div class="slider-wrap">
+        <div class="slider center">
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+          <div><img src="assets/accommodation.png" alt="Accommmodation"></div>
+        </div>
+      </div>
+
+      <div class="ui-grid-a">
+        <div class="ui-block-a">
+          <a href="#" data-role="button" data-icon="calendar">
+            Reserve
+          </a>
+        </div>
+        <div class="ui-block-b">
+          <a href="#" data-role="button" data-icon="heart">
+            Favourites
+          </a>
+        </div>
+      </div>
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
-            <a href="about.html" class="ui-state-persist ui-btn-active">
+            <a href="about.html">
               About
             </a>
           </li>
