--- a/tma/implementation/contact.html
+++ b/tma/implementation/contact.html
@@ -6,17 +6,17 @@
 
   <title>Zedland University</title>
 
-  <link
-    rel="stylesheet"
-    href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
-
-  <!-- Map -->
+  <script src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script src="map.js"></script>
+
+  <script src="assets/main.js"></script>
 </head>
 <body>
   <div data-role="page" id="contact">
@@ -24,8 +24,10 @@
       <a href="#home"
          data-icon="home"
          data-transition="slidefade"
-         data-direction="reverse">
-        Home
+         data-direction="reverse"
+         data-iconpos="notext"
+         data-role="button"
+         role="button">
       </a>
       <h1>Zedland</h1>
     </div>
@@ -36,29 +38,47 @@
         <!-- map loads here... -->
       </div>
 
-      <address>
-        Malet Street,<br>
-        London<br>
-        WC1E 7HX<br><br>
-        Phone: <a href="tel:+442076316000">020 7631 6000</a>
-      </address>
+      <div class="ui-grid-a">
+        <div class="ui-block-a">
+          <a href="tel:+442076316000" data-role="button" data-icon="phone">
+            Call Us
+          </a>
+          <a href="sms:+4407000000000" data-role="button" data-icon="comment">
+            SMS Us
+          </a>
+          <a href="mailto:contact@bbk.ac.uk" data-role="button" data-icon="mail">
+            Email Us
+          </a>
+        </div>
+        <div class="ui-block-b">
+          <address>
+            Address:<br><br>
+            University of Zedland,<br>
+            Malet Street,<br>
+            London<br>
+            WC1E 7HX<br><br>
+          </address>
+        </div>
+      </div>
 
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
         <ul>
           <li>
-            <a href="about.html" data-prefetch>About</a>
+            <a href="about.html">
+              About
+            </a>
           </li>
           <li>
-            <a href="contact.html"
-               class="ui-state-persist ui-btn-active"
-               data-prefetch>
+            <a href="contact.html" class="ui-state-persist ui-btn-active">
                Contact
             </a>
           </li>
           <li>
-            <a href="login.html" data-prefetch>Login</a>
+            <a href="login.html">
+              Login
+            </a>
           </li>
         </ul>
       </div>
@@ -66,6 +86,3 @@
   </div>
 </body>
 </html>
-
-
-ui-btn-active
