--- a/tma/implementation/index.html
+++ b/tma/implementation/index.html
@@ -1,182 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Zedland University</title>
+  <title>Zedland University</title>
 
-	<link
-		rel="stylesheet"
-		href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
-	<link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/styles.css" />
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
+  <script src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
+  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+  <script src="assets/main.js"></script>
 </head>
 <body>
-	<div data-role="page" id="home">
-		<div data-role="header">
-			<h1>Zedland</h1>
-		</div>
+  <div data-role="page" id="home">
+    <div data-role="header">
+      <h1>Zedland</h1>
+    </div>
 
-		<div data-role="content">
-			<h2>Accomodation</h2>
+    <div data-role="content">
+      <img src="assets/logo.png" class="logo" alt="logo">
 
-			<ul data-role="listview" data-inset="true">
-				<li>
-					<a href="#five" data-transition="slidefade">
-						Five Star
-					</a>
-				</li>
-				<li>
-					<a href="#four" data-transition="slidefade">
-						Four Star
-					</a>
-				</li>
-				<li>
-					<a href="#three" data-transition="slidefade">
-						Three Star
-					</a>
-				</li>
-			</ul>
-		</div>
+      <ul data-role="listview" data-inset="true">
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">All</a>
+        </li>
+        <li>
+          <a href="#star" data-transition="slidefade">By Star Rating</a>
+        </li>
+        <li>
+          <a href="#location" data-transition="slidefade">By Location</a>
+        </li>
+        <li>
+          <a href="#type" data-transition="slidefade">By Type</a>
+        </li>
+        <li>
+          <a href="#price" data-transition="slidefade">By Price</a>
+        </li>
+      </ul>
+    </div>
 
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar" data-id="footernav">
-				<ul>
-					<li>
-						<a href="about.html" data-prefetch>About</a>
-					</li>
-					<li>
-						<a href="contact.html" data-prefetch>Contact</a>
-					</li>
-					<li>
-						<a href="login.html" data-prefetch>Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-	<div data-role="page" id="five">
-		<div data-role="header">
-			<a href="#home"
-			   data-icon="home"
-			   data-transition="slidefade"
-			   data-direction="reverse">
-				Home
-			</a>
-			<h1>Zedland</h1>
-		</div>
-		<div data-role="content">
-			<h2>Accomodation</h2>
-			<ul data-role="listview"
-			    data-inset="true"
-			    data-filter="true"
-			    data-filter-placeholder="Enter accomodation name">
-				<li>
-					<a href="accomodation.html"
-					   data-transition="slidefade"
-					   data-prefetch>
-					   Accomodation A
-					</a>
-				</li>
-				<li>
-					<a href="accomodation.html"
-					   data-transition="slidefade">
-					   Accomodation B
-					</a>
-				</li>
-				<li>
-					<a href="accomodation.html"
-					   data-transition="slidefade">
-					   Accomodation C
-					</a>
-				</li>
-				<li>
-					<a href="accomodation.html"
-					   data-transition="slidefade">
-					   Accomodation D
-					</a>
-				</li>
-			</ul>
-		</div>
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar" data-id="footernav">
-				<ul>
-					<li>
-						<a href="about.html" data-prefetch>About</a>
-					</li>
-					<li>
-						<a href="contact.html" data-prefetch>Contact</a>
-					</li>
-					<li>
-						<a href="login.html" data-prefetch>Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
 
-	<div data-role="page" id="four">
-		<div data-role="header">
-			<a href="#home"
-			   data-icon="home"
-			   data-transition="slidefade"
-			   data-direction="reverse">
-				Home
-			</a>
-			<h1>Zedland</h1>
-		</div>
-		<div data-role="content">
-			<h2>Accomodation</h2>
-		</div>
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar" data-id="footernav">
-				<ul>
-					<li>
-						<a href="about.html" data-prefetch>About</a>
-					</li>
-					<li>
-						<a href="contact.html" data-prefetch>Contact</a>
-					</li>
-					<li>
-						<a href="login.html" data-prefetch>Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+  <div data-role="page" id="star">
+    <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-transition="slidefade"
+         data-direction="reverse"
+         data-iconpos="notext"
+         data-role="button"
+         role="button">
+      </a>
+      <h1>Zedland</h1>
+    </div>
 
-	<div data-role="page" id="three">
-		<div data-role="header">
-			<a href="#home"
-			   data-icon="home"
-			   data-transition="slidefade"
-			   data-direction="reverse">
-				Home
-			</a>
-			<h1>Zedland</h1>
-		</div>
-		<div data-role="content">
-			<h2>Accomodation</h2>
-		</div>
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar" data-id="footernav">
-				<ul>
-					<li>
-						<a href="about.html" data-prefetch>About</a>
-					</li>
-					<li>
-						<a href="contact.html" data-prefetch>Contact</a>
-					</li>
-					<li>
-						<a href="login.html" data-prefetch>Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+    <div data-role="content">
+      <h2>By Star Rating</h2>
+
+      <ul data-role="listview" data-inset="true">
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Five Stars
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Four Stars
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Three Stars
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Two Stars
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            One Star
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <div data-role="page" id="location">
+    <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-transition="slidefade"
+         data-direction="reverse"
+         data-iconpos="notext"
+         data-role="button"
+         role="button">
+      </a>
+      <h1>Zedland</h1>
+    </div>
+
+    <div data-role="content">
+      <h2>By Location</h2>
+
+      <ul data-role="listview" data-inset="true">
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            North
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            East
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            South
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            West
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <div data-role="page" id="type">
+    <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-transition="slidefade"
+         data-direction="reverse"
+         data-iconpos="notext"
+         data-role="button"
+         role="button">
+      </a>
+      <h1>Zedland</h1>
+    </div>
+
+    <div data-role="content">
+      <h2>By Type</h2>
+
+      <ul data-role="listview" data-inset="true">
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            House
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Flat
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Studio
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Room
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <div data-role="page" id="price">
+    <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-transition="slidefade"
+         data-direction="reverse"
+         data-iconpos="notext"
+         data-role="button"
+         role="button">
+      </a>
+      <h1>Zedland</h1>
+    </div>
+
+    <div data-role="content">
+      <h2>By Price</h2>
+
+      <ul data-role="listview" data-inset="true">
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            Up to &pound;100 per week
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            &pound;100 - &pound;200 per week
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            &pound;200 - &pound;300 per week
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            &pound;300 - &pound;400 per week
+          </a>
+        </li>
+        <li>
+          <a href="accommodation_list.html" data-transition="slidefade">
+            &pound;400+ per week
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div data-role="footer" data-position="fixed">
+      <div data-role="navbar" data-id="footernav">
+        <ul>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 </html>
