--- a/session_6/ho/churchill-hotel.html
+++ b/session_6/ho/churchill-hotel.html
@@ -15,8 +15,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
-</head><body>
+</head>
+<body>
   <div data-role="page" id="churchill">
     <div data-role="header">
       <a href=""
@@ -36,6 +39,7 @@
         <li>Michelin star restaurant</li>
       </ul>
       <a href="#" class="ui-btn" id="addbtn">Favourites</a>
+      <div id="addedtofavourites"></div>
       <div id="nostorage"></div>
     </div>
     <div data-role="footer" data-position="fixed">
