--- a/session_6/ho/fox-hotel.html
+++ b/session_6/ho/fox-hotel.html
@@ -15,6 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
@@ -28,7 +30,7 @@
       <h1>Five Star Hotels</h1>
     </div>
     <div data-role="content">
-      <h2>Fox Hotel</h2>
+      <h2 id="hoteltitle">Fox Hotel</h2>
       <ul>
         <li>Genuine *****</li>
         <li>Extra large rooms and suites</li>
@@ -36,6 +38,9 @@
         <li>Full size pool and full gym</li>
         <li>Michelin star restaurant</li>
       </ul>
+      <a href="#" class="ui-btn" id="addbtn">Favourites</a>
+      <div id="addedtofavourites"></div>
+      <div id="nostorage"></div>
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
