--- a/session_6/ho/contact.html
+++ b/session_6/ho/contact.html
@@ -16,7 +16,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
@@ -28,23 +27,26 @@
          data-direction="reverse">
         Home
       </a>
-      <h1>Zedland Hotel Finder</h1>
+      <h1>Zedland Hotels</h1>
     </div>
     <div data-role="content">
       <h2>Contact</h2>
       <a
         href="tel:+7810183041"
-        class="ui-btn ui-icon-phone ui-btn-icon-left ui-corner-all ui-btn-icon-notext">
+        class="ui-btn ui-icon-phone ui-btn-icon-left ui-corner-all">
+        Call Us
       </a>
       <a
         href="mailto:zed@zedland.co.uk"
-        class="ui-btn ui-icon-mail ui-btn-icon-left ui-corner-all ui-btn-icon-notext">
+        class="ui-btn ui-icon-mail ui-btn-icon-left ui-corner-all">
+        Email Us
       </a>
       <a
         href="sms://+7551876198"
-        class="ui-btn ui-icon-comment ui-btn-icon-left ui-corner-all ui-btn-icon-notext">
+        class="ui-btn ui-icon-comment ui-btn-icon-left ui-corner-all">
+        SMS Us
       </a>
-      <p>72 Tower Park<br>Capital City<br>Zedland<br>ZL7867H</p>
+      <p>Address:<br><br>72 Tower Park<br>Capital City<br>Zedland<br>ZL7867H</p>
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
