--- a/session_6/ho/index.html
+++ b/session_6/ho/index.html
@@ -16,13 +16,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
 	<div data-role="page" id="home">
 		<div data-role="header">
-			<h1>Zedland Hotel Finder</h1>
+			<h1>Zedland Hotels</h1>
 		</div>
 
 		<div data-role="content">
