--- a/session_6/ho/login.html
+++ b/session_6/ho/login.html
@@ -16,7 +16,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
@@ -28,33 +27,32 @@
          data-direction="reverse">
         Home
       </a>
-      <h1>Zedland Hotel Finder</h1>
+      <h1>Zedland Hotels</h1>
     </div>
     <div data-role="content">
       <h2>Login</h2>
       <form action="booking.html" method="post" id="frm1">
-        <div data-role="fieldcontain">
+        <div>
           <label for="user" class="ui-hidden-accessible">User Name:</label>
           <input
             id="user"
-            type="text"
+            type="email"
             name="user"
-            data-mini="true"
             placeholder="Username"
             required>
         </div>
-        <div data-role="fieldcontain">
+        <div>
           <label for="pass" class="ui-hidden-accessible">Password:</label>
           <input
             id="pass"
             type="password"
             name="pass"
-            data-mini="true"
             placeholder="Password"
-            required>
+            required
+            minlength="5">
         </div>
-        <div data-role="fieldcontain">
-          <input type="submit" class="ui-btn" value="Submit" data-mini="true">
+        <div>
+          <input type="submit" class="ui-btn" value="Submit">
         </div>
       </form>
     </div>
