--- a/session_6/ho/maps.html
+++ b/session_6/ho/maps.html
@@ -16,13 +16,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/additional-methods.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
   <div data-role="page" id="map">
     <div data-role="header">
-      <h1>Locations</h1>
+      <a href="#home"
+         data-icon="home"
+         data-transition="slidefade"
+         data-direction="reverse">
+        Home
+      </a>
+      <h1>Zedland Hotels</h1>
     </div>
 
     <div data-role="content" id="map-container">
