Basics for the pages

--- a/fma/implementation/about.html
+++ b/fma/implementation/about.html
@@ -26,8 +26,10 @@
     <div data-role="header">
       <a href="#home"
          data-icon="home"
+         data-iconpos="notext"
          data-transition="slidefade"
-         data-direction="reverse">
+         data-direction="reverse"
+         class="ui-alt-icon">
         Home
       </a>
       <h1>Zedland Hotels</h1>
