--- a/fma/implementation/index.html
+++ b/fma/implementation/index.html
@@ -109,8 +109,10 @@
     <div data-role="header">
       <a href="#home"
          data-icon="home"
+         data-iconpos="notext"
          data-transition="slidefade"
-         data-direction="reverse">
+         data-direction="reverse"
+         class="ui-alt-icon">
         Home
       </a>
       <h1>Zedland Hotels</h1>
@@ -146,8 +148,10 @@
     <div data-role="header">
       <a href="#home"
          data-icon="home"
+         data-iconpos="notext"
          data-transition="slidefade"
-         data-direction="reverse">
+         data-direction="reverse"
+         class="ui-alt-icon">
         Home
       </a>
       <h1>Zedland Hotels</h1>
@@ -176,8 +180,10 @@
     <div data-role="header">
       <a href="#home"
          data-icon="home"
+         data-iconpos="notext"
          data-transition="slidefade"
-         data-direction="reverse">
+         data-direction="reverse"
+         class="ui-alt-icon">
         Home
       </a>
       <h1>Zedland Hotels</h1>
