--- a/fma/implementation/churchill-hotel.html
+++ b/fma/implementation/churchill-hotel.html
@@ -31,8 +31,12 @@
       <a href=""
          data-rel="back"
          data-icon="back"
+         data-iconpos="notext"
          data-transition="slidefade"
-         data-direction="reverse">Go Back</a>
+         data-direction="reverse"
+         class="ui-alt-icon">
+        Go Back
+      </a>
       <h1>Zedland Hotels</h1>
     </div>
     <div data-role="content">
