Accommodation initial set up

--- a/fma/implementation/churchill-hotel.html
+++ b/fma/implementation/churchill-hotel.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Zedland Hotels</title>
+  <title>Zedland</title>
 
   <link
     rel="stylesheet"
@@ -38,7 +38,7 @@
          class="ui-alt-icon">
         Go Back
       </a>
-      <h1>Zedland Hotels</h1>
+      <h1>Zedland</h1>
     </div>
     <div data-role="content">
       <h2 id="hoteltitle">Churchill Hotel</h2>
