--- a/fma/implementation/list.html
+++ b/fma/implementation/list.html
@@ -30,6 +30,15 @@
 <body>
   <div data-role="page" id="accommodation">
     <div data-role="header">
+      <a href=""
+         data-rel="back"
+         data-icon="back"
+         data-iconpos="notext"
+         data-transition="slidefade"
+         data-direction="reverse"
+         class="ui-alt-icon">
+        Go Back
+      </a>
       <h1>Zedland</h1>
     </div>
     <div data-role="content">
@@ -38,7 +47,6 @@
       <ul
         id="accommodationlist"
         data-role="listview"
-        data-inset="true"
         data-filter="true"
         data-filter-placeholder="Search">
       </ul>
