--- a/fma/implementation/accommodation.html
+++ b/fma/implementation/accommodation.html
@@ -27,7 +27,7 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <div data-role="page" id="churchill">
+  <div data-role="page" id="accommodation">
     <div data-role="header">
       <a href=""
          data-rel="back"
@@ -41,20 +41,11 @@
       <h1>Zedland</h1>
     </div>
     <div data-role="content">
-      <h2 id="hoteltitle">Churchill Hotel</h2>
-      <ul>
-        <li>Genuine *****</li>
-        <li>Extra large rooms and suites</li>
-        <li>Designer furniture</li>
-        <li>Full size pool and full gym</li>
-        <li>Michelin star restaurant</li>
-      </ul>
-      <div id="nostorage"></div>
+      <h2 id="accommodationtitle"></h2>
+      <div id="accommodationid"></div>
+      <div id="contentArea"></div>
       <div class="favourites"></div>
-      <a
-        id="resbtn"
-        href="login.html"
-        class="ui-btn ui-icon-calendar ui-btn-icon-left ui-corner-all">
+      <a href="login.html" data-role="button" data-icon="action" id="resbtn">
         Reservation
       </a>
     </div>
