--- a/fma/implementation/contact.html
+++ b/fma/implementation/contact.html
@@ -41,22 +41,37 @@
     </div>
     <div data-role="content">
       <h2>Contact</h2>
-      <a
-        href="tel:+7810183041"
-        class="ui-btn ui-icon-phone ui-btn-icon-left ui-corner-all">
-        Call Us
-      </a>
-      <a
-        href="mailto:zed@zedland.co.uk"
-        class="ui-btn ui-icon-mail ui-btn-icon-left ui-corner-all">
-        Email Us
-      </a>
-      <a
-        href="sms://+7551876198"
-        class="ui-btn ui-icon-comment ui-btn-icon-left ui-corner-all">
-        SMS Us
-      </a>
-      <p>Address:<br><br>72 Tower Park<br>Capital City<br>Zedland<br>ZL7867H</p>
+      <div id="contact-map-canvas"></div>
+      <div id="nogeolocation"></div>
+      <div class="contact-wrap">
+        <div class="half">
+          <a
+            href="tel:+7810183041"
+            class="ui-btn ui-icon-phone ui-btn-icon-left ui-corner-all">
+            Call Us
+          </a>
+          <a
+            href="mailto:zed@zedland.co.uk"
+            class="ui-btn ui-icon-mail ui-btn-icon-left ui-corner-all">
+            Email Us
+          </a>
+          <a
+            href="sms://+7551876198"
+            class="ui-btn ui-icon-comment ui-btn-icon-left ui-corner-all">
+            SMS Us
+          </a>
+        </div>
+        <div class="half">
+          <p>
+            Address:<br><br>
+            Zedland University,<br>
+            72 Tower Park,<br>
+            Capital City,<br>
+            Zedland,<br>
+            ZL7867H
+          </p>
+        </div>
+      </div>
     </div>
     <div data-role="footer" data-position="fixed">
       <div data-role="navbar" data-id="footernav">
