--- a/fma/implementation/list.html
+++ b/fma/implementation/list.html
@@ -28,7 +28,7 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <div data-role="page" id="accommodation">
+  <div data-role="page" id="accommodationlist">
     <div data-role="header">
       <a href=""
          data-rel="back"
@@ -45,7 +45,7 @@
       <h2>View Accommodation</h2>
 
       <ul
-        id="accommodationlist"
+        id="accommodationlistitems"
         data-role="listview"
         data-filter="true"
         data-filter-placeholder="Search">
