--- a/fma/implementation/lost.html
+++ b/fma/implementation/lost.html
@@ -29,13 +29,14 @@
 <body>
   <div data-role="page" id="login">
     <div data-role="header">
-      <a href="#home"
-         data-icon="home"
+      <a href=""
+         data-rel="back"
+         data-icon="back"
          data-iconpos="notext"
          data-transition="slidefade"
          data-direction="reverse"
          class="ui-alt-icon">
-        Home
+        Go Back
       </a>
       <h1>Zedland</h1>
     </div>
